add colors variables

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
 $c-gray: #eee;
+
+$dark: #2f3d4d;
+$grey: #556d84;
+
+$green: #3bb3bd;
+$green-light: #b6dadd;
+
+$red: #d93d3d;
+$red-light: #f26b5c;
