--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
 $container-max-widths: (
   sm: 540px,
   md: 720px,
@@ -12,7 +8,15 @@ $container-max-widths: (
 $grid-gutter-width: 20px;
 
 @import "node_modules/bootstrap/scss/bootstrap";
+@import "utils";
+@import "fonts";
+@import "typography";
 
 body {
   background: $c-gray;
+  font-family: Roboto, serif;
+  font-size: 24px;
+  font-weight: 400;
 }
+
+@import "slogan";
