--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,6 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 68px;
 }
