--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -1,4 +1,5 @@
 .promo {
+  position: relative;
   min-height: 630px;
   background: linear-gradient(180deg, rgba(47, 61, 77, 0.6) 0%,
   rgba(47, 61, 77, 0.3) 97.92%),
@@ -10,6 +11,8 @@
 
   &__top {
     align-items: center;
+
+    margin-bottom: 100px;
   }
 
   &__logo {
@@ -23,11 +26,25 @@
 
   &__privacy {
     text-align: center;
+    font-size: 21px;
+    line-height: 32px;
+
+    a {
+      color: #fff;
+    }
   }
 
   &__content {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  &__title {
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 60px;
+    line-height: 76px;
+
+    margin-bottom: 60px;
   }
 }
