--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,6 +1,13 @@
-%h1 {
+%h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
-  font-size: 52px;
+  font-size: 45px;
   line-height: 68px;
+}
+
+%p {
+  font-family: Roboto, serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
 }
