add style for where to find block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,5 @@ body {
 @import "slogan";
 @import "./components/people-behind";
 @import "btn";
+@import "./components/where-to-find";
+@import "./components/gallery";
