Style for where to find block (#19)
* add style for where to find block

* delete duplicate import btn

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,5 @@ body {
 @import "btn";
 @import "slogan";
 @import "./components/people-behind";
+@import "./components/where-to-find";
+@import "./components/gallery";
