--- a/src/styles/slogan.scss
+++ b/src/styles/slogan.scss
@@ -3,6 +3,7 @@
   align-items: center;
   position: relative;
   background-color: $green;
+  padding: 0 47px;
 
   &--red {
     background-color: $red-light;
@@ -36,6 +37,7 @@
   }
 
   @media (max-width: 1200px) {
+    padding: 0 37px;
     padding-top: 33px;
 
     &__title {
