add basic layout and styles for perks block (#17)
* add basic layout and styles for perks block

* Update main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,5 +21,7 @@ body {
 @import "btn";
 @import "slogan";
 @import "./components/people-behind";
+@import "./components/perks";
+@import "./components/perk";
 @import "./components/where-to-find";
 @import "./components/gallery";
