--- a/src/styles/components/_perk.scss
+++ b/src/styles/components/_perk.scss
@@ -4,18 +4,12 @@
   text-align: left;
 
   &__image {
+    display: block;
+
     height: 44px;
     width: 44px;
 
     margin: 13px;
-
-    &--light {
-      background-color: $red-light;
-    }
-
-    &--dark {
-      background-color: $red;
-    }
   }
 
   &__image-wrapper {
@@ -34,7 +28,7 @@
 
   &__title {
     font-size: 24px;
-    line-height: 12px;
+    line-height: 26px;
   }
 
   &__description {
