--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,5 @@ body {
 @import "./components/people-behind";
 @import "./components/where-to-find";
 @import "./components/gallery";
+@import "vacancies";
+@import "select";
