--- a/src/styles/components/_promo.scss
+++ b/src/styles/components/_promo.scss
@@ -40,6 +40,12 @@
     align-items: center;
   }
 
+  &__subtitle {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 36px;
+  }
+
   &__title {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 60px;
