--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@ body {
 
 @import "btn";
 @import "slogan";
+@import "./components/promo";
 @import "./components/people-behind";
 @import "./components/perks";
 @import "./components/perk";
