--- a/src/styles/components/_promo.scss
+++ b/src/styles/components/_promo.scss
@@ -16,7 +16,7 @@
   }
 
   &__logo {
-    background-image: url("../images/promo/logo.svg");
+    background-image: url("../images/logo.svg");
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -44,6 +44,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 36px;
+    text-transform: uppercase;
   }
 
   &__title {
