--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,3 +26,4 @@ body {
 @import "./components/perk";
 @import "./components/where-to-find";
 @import "./components/gallery";
+@import "./components/footer";
