add in-news block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,3 +26,5 @@ body {
 @import "./components/perk";
 @import "./components/where-to-find";
 @import "./components/gallery";
+@import "./components/in-news";
+@import "./components/news";
