--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,8 +5,13 @@
   }
 }
 
-@mixin newsCard($_backgrount-color, $_color, $_font-size) {
+@mixin news-card($_backgrount-color, $_color) {
   background-color: $_backgrount-color;
   color: $_color;
+}
+
+@mixin font-style-bold($_font-size, $_line-height) {
   font-size: $_font-size;
+  line-height: $_line-height;
+  font-weight: 700;
 }
