--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,4 +26,6 @@ body {
 @import "./components/perk";
 @import "./components/where-to-find";
 @import "./components/gallery";
+@import "./components/in-news";
+@import "./components/news";
 @import "./components/footer";
