fixed perks background

--- a/src/styles/components/_perk.scss
+++ b/src/styles/components/_perk.scss
@@ -16,6 +16,14 @@
     margin-right: 18px;
 
     border-radius: 10px;
+
+    &--dark {
+      background-color: $red;
+    }
+
+    &--light {
+      background-color: $red-light;
+    }
   }
 
   &__title {
