--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,8 @@ body {
 @import "./components/perk";
 @import "./components/where-to-find";
 @import "./components/gallery";
+@import "vacancies";
+@import "select";
 @import "./components/in-news";
 @import "./components/news";
 @import "./components/footer";
