--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -1,35 +1,60 @@
 .select {
   width: 448px;
   height: 87px;
-  padding: 10px 35px 10px 39px;
+  position: relative;
 
-  background-color: $grey;
-  border-radius: 10px;
-  border: none;
-
-  font-weight: 700;
-  font-size: 28px;
-
-  color: #fff;
-  cursor: pointer;
-
-  &:hover {
-    background-color: rgba(85, 109, 132, 0.7);
+  select::-ms-expand {
+    display: none;
   }
 
-  &:focus {
+  &::after {
+    content: url("../images/vacancies/arrow-down.svg");
+    color: #fff;
+
+    position: absolute;
+    top: 25px;
+    right: 32px;
+
+    pointer-events: none;
+  }
+
+  &__item {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0 39px;
+
     background-color: $grey;
-  }
+    border-radius: 10px;
+    border: none;
+    font-weight: 700;
+    font-size: 28px;
+    color: #fff;
 
-  &--dark {
-    background-color: $dark;
+    cursor: pointer;
 
     &:hover {
-      background-color: rgba(47, 61, 77, 0.7);
+      background-color: rgba(85, 109, 132, 0.7);
     }
 
     &:focus {
+      background-color: $grey;
+    }
+
+    &--dark {
       background-color: $dark;
+
+      &:hover {
+        background-color: rgba(47, 61, 77, 0.7);
+      }
+
+      &:focus {
+        background-color: $dark;
+      }
     }
   }
 }
