--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,6 +8,7 @@ $green-light: #b6dadd;
 
 $red: #d93d3d;
 $red-light: #f26b5c;
+$red-medium: #ff574d;
 
 $title-color-dark: #000;
 $text-color-dark: #3c4447;
