--- a/src/styles/components/_perks.scss
+++ b/src/styles/components/_perks.scss
@@ -5,16 +5,30 @@
   &__title {
     margin-bottom: 22px;
     font-size: 52px;
-    color: $title-color-dark;
+    @include title($title-color-dark);
   }
 
   &__description {
     margin-bottom: 45px;
-    font-size: 24px;
-    color: $text-color-dark;
+    @include description($title-color-dark);
   }
 
   &__perk {
     margin-bottom: 52px;
+  }
+
+  @media (max-width: 995px) {
+    padding: 24px;
+
+    &__title {
+      margin-bottom: 32px;
+      font-size: 38px;
+    }
+
+    &__description {
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 26px;
+    }
   }
 }
