--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -21,3 +21,9 @@
   line-height: 45px;
   color: $_color;
 }
+
+@mixin  description($_color) {
+  font-size: 24px;
+  line-height: 36px;
+  color: $_color;
+}
