--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,6 +2,11 @@
   background-color: $dark;
   min-height: 230px;
 
+  &__top {
+    align-items: center;
+    margin-bottom: 50px;
+  }
+
   &__logo {
     background-image: url("../images/logo.svg");
     background-size: contain;
@@ -9,7 +14,6 @@
 
     width: 200px;
     height: 100px;
-    margin-bottom: 50px;
   }
 
   &__copyright {
@@ -17,7 +21,7 @@
   }
 
   &__privacy {
-    text-align: center;
+    text-align: right;
     font-size: 21px;
     line-height: 32px;
 
@@ -29,6 +33,7 @@
   &__socials {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 
   &__linkedin {
@@ -50,7 +55,7 @@
   &__instagram {
     width: 40px;
     height: 40px;
-    background-image: url("../images/footer/linkedin.svg");
+    background-image: url("../images/footer/instagram.svg");
     background-repeat: no-repeat;
     background-size: contain;
   }
