--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,6 +2,11 @@
   background-color: $dark;
   min-height: 230px;
 
+  &__top {
+    align-items: center;
+    margin-bottom: 50px;
+  }
+
   &__logo {
     background-image: url("../images/logo.svg");
     background-size: contain;
@@ -9,7 +14,6 @@
 
     width: 200px;
     height: 100px;
-    margin-bottom: 50px;
   }
 
   &__copyright {
@@ -17,12 +21,50 @@
   }
 
   &__privacy {
-    text-align: center;
+    text-align: right;
     font-size: 21px;
     line-height: 32px;
 
     a {
       color: #fff;
     }
+  }
+
+  &__socials {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__linkedin {
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/footer/linkedin.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &__facebook {
+    width: 20px;
+    height: 40px;
+    background-image: url("../images/footer/facebook.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &__instagram {
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/footer/instagram.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  &__youtube {
+    width: 50px;
+    height: 35px;
+    background-image: url("../images/footer/youtube.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
