--- a/src/styles/components/_news.scss
+++ b/src/styles/components/_news.scss
@@ -1,5 +1,6 @@
 .news {
   border-radius: 20px;
+  @include hover(box-shadow, 10px 5px 5px black);
 
   &--green {
     @include news-card(rgba(0, 152, 0, 0.19), #009800);
@@ -19,7 +20,7 @@
   &__wrapper {
     height: 100%;
 
-    padding: 77px 10px 50px 45px;
+    padding: 77px 20px 50px 35px;
     display: flex;
     flex-direction: column;
     text-align: start;
@@ -37,6 +38,7 @@
     color: $text-color-dark;
     font-size: inherit;
     line-height: inherit;
+    font-weight: inherit;
   }
 
   &__bottom {
@@ -48,9 +50,49 @@
     flex-grow: 1;
   }
 
-  &__image {
+  &__image-wrapper {
     height: 65px;
-    object-fit: none;
-    object-position: 0;
+    line-height: 65px;
+  }
+
+  &__image {
+    vertical-align: middle;
+    object-fit: contain;
+  }
+
+  @media (max-width: 640px) {
+    &__quotes {
+      font-size: 100px;
+      line-height: 40px;
+    }
+
+    &--green {
+      font-size: 28px;
+      line-height: 37px;
+    }
+
+    &--gray {
+      font-size: 26px;
+      line-height: 34px;
+    }
+
+    &--blue {
+      font-size: 22px;
+      line-height: 34px;
+    }
+
+    &__wrapper {
+      padding: 77px 20px 50px 35px;
+    }
+
+    &__image-wrapper {
+      height: 40px;
+      line-height: 40px;
+    }
+
+    &__image {
+      max-height: 40px;
+      max-width: 180px;
+    }
   }
 }
