--- a/src/styles/components/_in-news.scss
+++ b/src/styles/components/_in-news.scss
@@ -13,4 +13,39 @@
     font-size: 24px;
     color: $text-color-dark;
   }
+
+  &__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 421px);
+    justify-content: center;
+    column-gap: 20px;
+    row-gap: 30px;
+  }
+
+  @media (max-width: 1328px) {
+    &__wrapper {
+      grid-template-columns: 421px;
+    }
+  }
+
+  @media (max-width: 995px) {
+    padding: 24px;
+
+    &__title {
+      margin-bottom: 32px;
+      font-size: 38px;
+    }
+
+    &__description {
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 26px;
+    }
+  }
+
+  @media (max-width: 640px) {
+    &__wrapper {
+      grid-template-columns: 327px;
+    }
+  }
 }
