--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -29,7 +29,10 @@
     }
   }
 
-  @media (max-width: 440px) {
-    width: 90%;
+  @media (max-width: 990px) {
+    width: 260px;
+    height: 50px;
+    font-size: 17px;
+    line-height: 40px;
   }
 }
