--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -8,7 +8,7 @@
   }
 
   &__logo {
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/logo.png");
     background-size: contain;
     background-repeat: no-repeat;
 
