add color variables

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -14,3 +14,10 @@ $title-color-dark: #000;
 $text-color-dark: #3c4447;
 
 $text-color-light: #fff;
+
+$card-color-crunch: rgba(0, 152, 0, 0.19);
+$card-color-forbes: rgba(60,59,59,0.19);
+$card-color-edsurge: rgba(0, 153, 138, 0.14);
+$text-color-crunch: #009800;
+$text-color-forbes: #3c3b3b;
+$text-color-edsurge: #00998a;
