--- a/src/styles/components/_news.scss
+++ b/src/styles/components/_news.scss
@@ -3,17 +3,17 @@
   @include hover(box-shadow, 10px 5px 5px black);
 
   &--green {
-    @include news-card(rgba(0, 152, 0, 0.19), #009800);
+    @include news-card($card-color-crunch, $text-color-crunch);
     @include font-style-bold(42px, 55px);
   }
 
   &--gray {
-    @include news-card(rgba(60,59,59,0.19), #3C3B3B);
+    @include news-card($card-color-forbes, $text-color-forbes);
     @include font-style-bold(35px, 45px);
   }
 
   &--blue {
-    @include news-card(rgba(0, 153, 138, 0.14) ,#00998A);
+    @include news-card($card-color-edsurge, $text-color-edsurge);
     @include font-style-bold(30px, 42px);
   }
 
