--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -1,60 +1,91 @@
 .select {
   width: 448px;
   height: 87px;
+  padding: 0 39px;
   position: relative;
 
-  select::-ms-expand {
-    display: none;
-  }
+  background-color: $grey;
+  border-radius: 10px;
+  border: none;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 87px;
+  color: #fff;
+
+  cursor: pointer;
 
   &::after {
     content: url("../images/vacancies/arrow-down.svg");
     color: #fff;
+    line-height: 1;
 
     position: absolute;
-    top: 25px;
+    top: 30px;
     right: 32px;
+    z-index: 3;
 
     pointer-events: none;
   }
 
-  &__item {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  &--open {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 10px 10px 0 0;
 
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 0 39px;
+    &::after {
+      transform: rotate(180deg);
+    }
+  }
 
+  &:hover {
+    background-color: rgba(85, 109, 132, 0.7);
+  }
+
+  &:focus {
     background-color: $grey;
-    border-radius: 10px;
-    border: none;
-    font-weight: 700;
-    font-size: 28px;
-    color: #fff;
+    outline: none;
+  }
 
-    cursor: pointer;
+  &--dark {
+    background-color: $dark;
 
     &:hover {
-      background-color: rgba(85, 109, 132, 0.7);
+      background-color: rgba(47, 61, 77, 0.7);
     }
 
     &:focus {
-      background-color: $grey;
-    }
-
-    &--dark {
       background-color: $dark;
-
-      &:hover {
-        background-color: rgba(47, 61, 77, 0.7);
-      }
-
-      &:focus {
-        background-color: $dark;
-      }
     }
+  }
+}
+
+.options {
+  display: none;
+
+  position: absolute;
+  z-index: 2;
+}
+
+.select--open ~ .options {
+  display: block;
+}
+
+.option {
+  padding: 0 39px;
+  background-color: $grey;
+  width: 448px;
+
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 87px;
+  color: #fff;
+
+  cursor: pointer;
+
+  &:last-of-type {
+    border-radius: 0 0 10px 10px;
+  }
+
+  &:hover {
+    color: $green;
   }
 }
