--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -1,51 +1,85 @@
 .select {
-  width: 448px;
-  height: 87px;
-  padding: 0 39px;
-  position: relative;
+  &__basic-option {
+    width: 448px;
+    height: 87px;
+    padding: 0 39px;
+    position: relative;
 
-  background-color: $grey;
-  border-radius: 10px;
-  border: none;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 87px;
-  color: #fff;
-
-  cursor: pointer;
-
-  &::after {
-    content: url("../images/vacancies/arrow-down.svg");
+    background-color: $grey;
+    border-radius: 10px;
+    border: none;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 87px;
     color: #fff;
-    line-height: 1;
 
-    position: absolute;
-    top: 30px;
-    right: 32px;
-    z-index: 3;
-
-    pointer-events: none;
-  }
-
-  &--open {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 10px 10px 0 0;
+    cursor: pointer;
 
     &::after {
-      transform: rotate(180deg);
+      content: url("../images/vacancies/arrow-down.svg");
+      color: #fff;
+      line-height: 1;
+
+      position: absolute;
+      top: 30px;
+      right: 32px;
+      z-index: 3;
+
+      pointer-events: none;
+    }
+
+    &--open {
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 10px 10px 0 0;
+
+      &::after {
+        transform: rotate(180deg);
+      }
+    }
+
+    &:hover {
+      background-color: rgba(85, 109, 132, 0.7);
+    }
+
+    &:focus {
+      background-color: $grey;
+      outline: none;
     }
   }
 
-  &:hover {
-    background-color: rgba(85, 109, 132, 0.7);
+  &__options {
+    display: none;
+
+    position: absolute;
+    z-index: 2;
   }
 
-  &:focus {
+  &__basic-option--open ~ .select__options {
+    display: block;
+  }
+
+  &__option {
+    padding: 0 39px;
     background-color: $grey;
-    outline: none;
+    width: 448px;
+
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 87px;
+    color: #fff;
+
+    cursor: pointer;
+
+    &:last-of-type {
+      border-radius: 0 0 10px 10px;
+    }
+
+    &:hover {
+      color: $green;
+    }
   }
 
-  &--dark {
+  &--dark .select__basic-option {
     background-color: $dark;
 
     &:hover {
@@ -56,36 +90,8 @@
       background-color: $dark;
     }
   }
-}
 
-.options {
-  display: none;
-
-  position: absolute;
-  z-index: 2;
-}
-
-.select--open ~ .options {
-  display: block;
-}
-
-.option {
-  padding: 0 39px;
-  background-color: $grey;
-  width: 448px;
-
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 87px;
-  color: #fff;
-
-  cursor: pointer;
-
-  &:last-of-type {
-    border-radius: 0 0 10px 10px;
-  }
-
-  &:hover {
-    color: $green;
+  &--dark .select__option {
+    background-color: $dark;
   }
 }
