--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -14,6 +14,7 @@
     color: #fff;
 
     cursor: pointer;
+    transition: background-color 0.2s;
 
     &::after {
       content: url("../images/vacancies/arrow-down.svg");
