--- a/src/styles/components/_in-news.scss
+++ b/src/styles/components/_in-news.scss
@@ -1,4 +1,5 @@
 .in-news {
+  margin-bottom: 20px;
   padding: 90px 48px 60px;
   text-align: center;
 
@@ -43,7 +44,9 @@
     }
   }
 
-  @media (max-width: 640px) {
+  @media (max-width: 480px) {
+    padding: 10px;
+
     &__wrapper {
       grid-template-columns: 327px;
     }
