--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -1,41 +1,42 @@
 .select {
-  width: 448px;
-  height: 87px;
-  position: relative;
-
-  select::-ms-expand {
-    display: none;
-  }
-
-  &::after {
-    content: url("../images/vacancies/arrow-down.svg");
-    color: #fff;
-
-    position: absolute;
-    top: 25px;
-    right: 32px;
-
-    pointer-events: none;
-  }
-
-  &__item {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-    display: block;
-    width: 100%;
-    height: 100%;
+  &__basic-option {
+    width: 448px;
+    height: 87px;
     padding: 0 39px;
+    position: relative;
 
     background-color: $grey;
     border-radius: 10px;
     border: none;
     font-weight: 700;
     font-size: 28px;
+    line-height: 87px;
     color: #fff;
 
     cursor: pointer;
+    transition: background-color 0.2s;
+
+    &::after {
+      content: url("../images/vacancies/arrow-down.svg");
+      color: #fff;
+      line-height: 1;
+
+      position: absolute;
+      top: 30px;
+      right: 32px;
+      z-index: 3;
+
+      pointer-events: none;
+    }
+
+    &--open {
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 10px 10px 0 0;
+
+      &::after {
+        transform: rotate(180deg);
+      }
+    }
 
     &:hover {
       background-color: rgba(85, 109, 132, 0.7);
@@ -43,18 +44,55 @@
 
     &:focus {
       background-color: $grey;
+      outline: none;
+    }
+  }
+
+  &__options {
+    display: none;
+
+    position: absolute;
+    z-index: 2;
+  }
+
+  &__basic-option--open ~ .select__options {
+    display: block;
+  }
+
+  &__option {
+    padding: 0 39px;
+    background-color: $grey;
+    width: 448px;
+
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 87px;
+    color: #fff;
+
+    cursor: pointer;
+
+    &:last-of-type {
+      border-radius: 0 0 10px 10px;
     }
 
-    &--dark {
+    &:hover {
+      color: $green;
+    }
+  }
+
+  &--dark .select__basic-option {
+    background-color: $dark;
+
+    &:hover {
+      background-color: rgba(47, 61, 77, 0.7);
+    }
+
+    &:focus {
       background-color: $dark;
-
-      &:hover {
-        background-color: rgba(47, 61, 77, 0.7);
-      }
-
-      &:focus {
-        background-color: $dark;
-      }
     }
+  }
+
+  &--dark .select__option {
+    background-color: $dark;
   }
 }
