--- a/src/styles/vacancies.scss
+++ b/src/styles/vacancies.scss
@@ -4,21 +4,36 @@
   &__wrapper {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 
   &__list {
-    margin-top: 93px;
+    margin-top: 63px;
   }
 
   &__item {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
     border-bottom: 1px solid #cbd0d3;
-    height: 70px;
     display: grid;
-    grid-template-columns: 50% 1fr 1fr;
+    grid-template-columns: 80% 20%;
     align-items: center;
 
     &:last-of-type {
       border-bottom: none;
+    }
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+      align-items: flex-start;
+      font-size: 18px;
+      line-height: 32px;
     }
   }
 
@@ -28,6 +43,7 @@
   }
 
   &__location {
+    text-align: right;
     font-weight: 700;
     color: #b4bbbe;
   }
@@ -54,9 +70,26 @@
       color: $green-light;
       outline: none;
     }
+
+    @media (max-width: 767px) {
+      display: none;
+    }
   }
 
-  @media (max-width: 500px) {
+  &__arrow {
+    background-image: url("../images/vacancies/arrow-right.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 7px;
+    height: 15px;
+    display: none;
+
+    @media (max-width: 767px) {
+      display: block;
+    }
+  }
+
+  @media (max-width: 992px) {
     padding: 47px 20px;
   }
 }
