--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,9 +13,14 @@ $grid-gutter-width: 20px;
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
   @extend %p;
 }
 
