--- a/src/styles/components/_news.scss
+++ b/src/styles/components/_news.scss
@@ -1,20 +1,57 @@
 .news {
+  position: relative;
+  overflow: hidden;
+
   border-radius: 20px;
   @include hover(box-shadow, 10px 5px 5px black);
+
+  &::before {
+    pointer-events: none;
+    position: absolute;
+    top: var(--top);
+    left: var(--left);
+    width: var(--width);
+    height: var(--height);
+    content: "";
+
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s, transform 0.3s;
+    border-radius: 50%;
+    transform: scale(0);
+  }
+
+  &:hover::before {
+
+    transform: scale(2);
+    opacity: 0.2;
+  }
 
   &--crunch {
     @include news-card($card-color-crunch, $text-color-crunch);
     @include font-style-bold(42px, 55px);
+
+    &::before {
+      background-color: $text-color-crunch;
+    }
   }
 
   &--forbes {
     @include news-card($card-color-forbes, $text-color-forbes);
     @include font-style-bold(35px, 45px);
+
+    &::before {
+      background-color: $text-color-forbes;
+    }
   }
 
   &--edsurge {
     @include news-card($card-color-edsurge, $text-color-edsurge);
     @include font-style-bold(30px, 42px);
+
+    &::before {
+      background-color: $text-color-edsurge;
+    }
   }
 
   &__wrapper {
