--- a/src/styles/components/_promo.scss
+++ b/src/styles/components/_promo.scss
@@ -14,6 +14,7 @@
 
   &__top {
     align-items: center;
+    justify-content: space-between;
 
     margin-bottom: 100px;
   }
@@ -69,6 +70,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.07);
+    }
 
     &--big {
       background-image: url("../images/promo/glassdoor-big.svg");
