--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -49,14 +49,17 @@
   }
 
   &__options {
-    display: none;
-
     position: absolute;
     z-index: 2;
+
+    visibility: hidden;
+    transition: opacity 0.3s;
+    opacity: 0;
   }
 
   &__basic-option--open ~ .select__options {
-    display: block;
+    visibility: visible;
+    opacity: 1;
   }
 
   &__option {
@@ -71,12 +74,27 @@
 
     cursor: pointer;
 
+    transition: transform 0.3s, opacity 0.3s;
+    transform: translateY(-100%);
+    opacity: 0;
+
     &:last-of-type {
       border-radius: 0 0 10px 10px;
     }
 
     &:hover {
       color: $green;
+    }
+  }
+
+  &__basic-option--open ~ .select__options .select__option {
+    transform: none;
+    opacity: 1;
+
+    @for $i from 1 to 10 {
+      &:nth-child(#{$i + 1}) {
+        transition-delay: #{0.05 * $i}s;
+      }
     }
   }
 
