--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -28,6 +28,7 @@
   }
 
   &__privacy {
+    text-align: right;
     font-size: 21px;
     line-height: 32px;
 
@@ -37,6 +38,7 @@
 
     @media (max-width: 767px) {
       font-size: 16px;
+      text-align: left;
     }
   }
 
