--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -1,4 +1,8 @@
 .select {
+  &:first-of-type {
+    margin-bottom: 30px;
+  }
+
   &__basic-option {
     width: 448px;
     height: 87px;
@@ -87,6 +91,10 @@
     }
   }
 
+  &--dark .select__option {
+    background-color: $dark;
+  }
+
   &__basic-option--open ~ .select__options .select__option {
     transform: none;
     opacity: 1;
@@ -112,9 +120,5 @@
 
   &--dark .select__options {
     z-index: 1;
-  }
-
-  &--dark .select__option {
-    background-color: $dark;
   }
 }
