write animation on scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,3 +37,4 @@ html {
 @import "./components/in-news";
 @import "./components/news";
 @import "./components/footer";
+@import "./components/scroll-section";
