--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -21,3 +21,5 @@ $card-color-edsurge: rgba(0, 153, 138, 0.14);
 $text-color-crunch: #009800;
 $text-color-forbes: #3c3b3b;
 $text-color-edsurge: #00998a;
+
+$image-border-radius: 20px;
