--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -7,34 +7,43 @@
     position: absolute;
     top: 0;
     left: 0;
+
     width: 100%;
     height: inherit;
+
     color: $text-color-light;
     font-size: 50px;
+    @extend %h2;
+
     border: none;
     outline: none;
     background-color: transparent;
-    @extend %h2;
 
     &::after {
       content: "";
       position: absolute;
       bottom: -30px;
       left: 50%;
+
       width: 0;
       height: 10px;
+
       background-color: $red-medium;
       border-radius: 5px;
+
       transform: translateX(-50%);
       transition: width 0.3s;
     }
+
     &::before {
       content: "";
       position: absolute;
       top: 0;
       left: 50%;
+
       width: calc(100% - 20px);
       height: 100%;
+
       background-color: #fff;
       opacity: 0.4;
       transform: translateX(-50%);
@@ -69,9 +78,11 @@
     position: absolute;
     top: 0;
     left: 50%;
+
     width: calc(100% - 20px);
     height: inherit;
-    border-radius: 20px;
+
+    border-radius: $image-border-radius;
     transform: translateX(-50%);
   }
 
@@ -83,10 +94,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
+
     height: inherit;
     width: inherit;
-    border-radius: 20px;
+
+    object-fit: cover;
+    border-radius: $image-border-radius;
     transition: transform 0.6s;
     transform: translateY(100%);
 
