--- a/src/styles/components/_people-behind.scss
+++ b/src/styles/components/_people-behind.scss
@@ -9,16 +9,14 @@
 
   &__description {
     margin-bottom: 45px;
-    font-size: 24px;
-    line-height: 36px;
-    color: $text-color-dark;
+    @include description($text-color-dark);
   }
 
   &__img {
     object-fit: cover;
     height: inherit;
     width: inherit;
-    border-radius: 10px;
+    border-radius: $image-border-radius;
 
     &--wrp {
       height: 300px;
