--- a/src/styles/components/_where-to-find.scss
+++ b/src/styles/components/_where-to-find.scss
@@ -9,15 +9,11 @@
 
   &__description {
     margin-bottom: 60px;
-    font-size: 24px;
-    line-height: 36px;
-    color: $text-color-dark;
+    @include description($text-color-dark);
   }
 
   &__hint {
-    font-size: 24px;
-    line-height: 36px;
-    color: $text-color-dark;
+    @include description($text-color-dark);
   }
 
   &__gallery {
