--- a/src/styles/components/_people-behind.scss
+++ b/src/styles/components/_people-behind.scss
@@ -17,6 +17,7 @@
     height: inherit;
     width: inherit;
     border-radius: $image-border-radius;
+    @include hover(transform, scale(1.1));
 
     &--wrp {
       height: 300px;
