--- a/src/styles/components/_people-behind.scss
+++ b/src/styles/components/_people-behind.scss
@@ -22,6 +22,7 @@
     height: inherit;
     width: inherit;
     border-radius: $image-border-radius;
+    @include hover(transform, scale(1.1));
   }
 
   @media (max-width: 995px) {
