--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -3,21 +3,31 @@
     margin-bottom: 30px;
   }
 
-  &__basic-option {
-    width: 448px;
-    height: 87px;
-    padding: 0 39px;
-    position: relative;
-
+  &__basic-option,
+  &__option {
+    padding: 28px 39px;
     background-color: $grey;
-    border-radius: 10px;
-    border: none;
+    width: 448px;
     font-weight: 700;
     font-size: 28px;
-    line-height: 87px;
+    height: 87px;
     color: #fff;
-
     cursor: pointer;
+
+    @media (max-width: 767px) {
+      width: 320px;
+      height: 50px;
+      font-size: 16px;
+      padding: 17px 20px;
+    }
+  }
+
+  &__basic-option {
+    position: relative;
+
+    border-radius: 10px;
+    border: none;
+
     transition: background-color 0.2s;
 
     &::after {
@@ -31,6 +41,10 @@
       z-index: 1;
 
       pointer-events: none;
+
+      @media (max-width: 767px) {
+        top: 18px;
+      }
     }
 
     &--open {
@@ -67,17 +81,6 @@
   }
 
   &__option {
-    padding: 0 39px;
-    background-color: $grey;
-    width: 448px;
-
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 87px;
-    color: #fff;
-
-    cursor: pointer;
-
     transition: transform 0.3s, opacity 0.3s;
     transform: translateY(-100%);
     opacity: 0;
