--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -15,6 +15,8 @@
     cursor: pointer;
 
     @media (max-width: 767px) {
+      max-width: 90%;
+      margin: 0 auto;
       width: 320px;
       height: 50px;
       font-size: 16px;
