--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,11 +1,4 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
-}
-
-@mixin hover-duration($_property, $_toValue, $_duration) {
+@mixin hover($_property, $_toValue, $_duration: 0.3s) {
   transition: #{$_property} #{$_duration};
   &:hover {
     #{$_property}: $_toValue;
