fix scroll animation

--- a/src/styles/components/_slogan.scss
+++ b/src/styles/components/_slogan.scss
@@ -1,11 +1,31 @@
 .slogan {
+  --slogan-after-opacity: 0;
+  --slogan-after-transform: translateY(20%);
+
+  position: relative;
   display: flex;
   align-items: center;
-  position: relative;
-  background-color: $green;
+  background-color: transparent;
   padding: 0 47px;
 
-  &--red {
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: var(--slogan-after-opacity);
+    transform: var(--slogan-after-transform);
+    transition: $scroll-transform-transition, $scroll-opacity-transition;
+  }
+
+  &--green::after {
+    background-color: $green;
+  }
+
+  &--red::after {
     background-color: $red-light;
   }
 
