--- a/src/styles/components/_scroll-section.scss
+++ b/src/styles/components/_scroll-section.scss
@@ -1,7 +1,7 @@
-.scroll-section {
+.scroll {
   opacity: 0;
-  transform: translateY(100%);
-  transition: transform 0.8s ease-out, opacity 1s ease-out;
+  transform: translateY(20%);
+  transition: $scroll-transform-transition, $scroll-opacity-transition;
 
   &--active {
     opacity: 1;
