--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -6,12 +6,10 @@
   &__basic-option,
   &__option {
     position: relative;
-    padding: 28px 39px;
     background-color: $grey;
     width: 448px;
     font-weight: 700;
     font-size: 28px;
-    height: 87px;
     color: #fff;
     cursor: pointer;
 
@@ -28,6 +26,8 @@
   &__basic-option {
     border-radius: 10px;
     border: none;
+    height: 87px;
+    padding: 28px 39px;
 
     transition: background-color 0.2s;
 
@@ -82,11 +82,17 @@
   }
 
   &__option {
+    padding: 15px 39px;
     transition: transform 0.3s, opacity 0.3s;
     transform: translateY(-100%);
     opacity: 0;
 
+    &:first-of-type {
+      padding-top: 30px;
+    }
+
     &:last-of-type {
+      padding-bottom: 30px;
       border-radius: 0 0 10px 10px;
     }
 
