--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin hover($_property, $_toValue, $_duration: 0.3s) {
-  transition: #{$_property} #{$_duration};
+  transition: #{$_property} #{$_duration} ease-out;
   &:hover {
     #{$_property}: $_toValue;
   }
