created value block, added style for value block and first image

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,3 +38,5 @@ html {
 @import "./components/news";
 @import "./components/footer";
 @import "./components/scroll-section";
+@import "./components/what-we-value.scss";
+@import "./components/value";
