--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -1,30 +1,20 @@
 .value {
   display: flex;
-  position: relative;
   justify-content: space-between;
-  align-content: stretch;
+  padding: 30px 10px 0;
   background-color: black;
   border-radius: 20px;
 
   &__title {
-    position: relative;
-  }
-
-  &__text {
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: 0;
-
-    color: white;
+    writing-mode: vertical-lr;
+    text-align: end;
     font-size: 32px;
-
-    transform: rotate(-90deg);
+    color: white;
+    transform: rotate(180deg);
   }
 
   &__image {
     display: block;
-    margin: 35px 10px 0;
     height: 265px;
     width: 325px;
   }
