add basic background

--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 30px 10px 0;
-  background-color: black;
+  background-color: $green;
   border-radius: 20px;
 
   &__title {
